# satspath

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  Makefile  README.md  SECURITY_AUDIT.md  conflicts.txt  development_status.md  docker-compose.yml  extract_conflicts.py  test_builder.rs  walkthrough.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker.yml
ark-bridge/: Dockerfile  package-lock.json  package.json  tsconfig.json
ark-bridge/src/: authenticator.ts  index.ts  taprootVerification.ts  vtxoDAGVerification.ts
ark-bridge/src/__tests__/: vtxoDAGVerification.test.ts
ark-bridge/src/scripts/: mockNodes.ts
crates/satspath-cli/: Cargo.toml
crates/satspath-cli/src/: main.rs
crates/satspath-cli/src/commands/: ark.rs  demo.rs  dns.rs  encode.rs  init.rs  invite.rs  keystore.rs  mod.rs  pay.rs  peer.rs  preview.rs  proofs.rs  qr.rs  quote.rs  register.rs  show.rs  wallet.rs  web.rs  web_index.html
crates/satspath-cli/tests/: peer_transfer.rs  proof_flow.rs  wallet_flow.rs
crates/satspath-core/: Cargo.toml
crates/satspath-core/src/: ark.rs  bip321.rs  bip353.rs  bip353_publish.rs  codec.rs  crypto.rs  errors.rs  execution.rs  lib.rs  ownership.rs  peer_registry.rs  platform.rs  pointer.rs  privacy.rs  profile.rs  registry.rs  resolver.rs  validation.rs
crates/satspath-core/src/resolvers/: bip353.rs  http.rs  mod.rs  nostr.rs  pear.rs  platform.rs
crates/satspath-router/: Cargo.toml
crates/satspath-router/src/: ark.rs  ark_routes.rs  bip353_preview.rs  fees.rs  lib.rs  lightning.rs  lnurl.rs  onchain.rs  priority.rs  quote_response.rs  router.rs  scoring.rs
crates/satspath-router/tests/: integration.rs
crates/satspath-swaps/: Cargo.toml
crates/satspath-swaps/src/: ark_bridge.rs  boltz_client.rs  chain_swap.rs  errors.rs  execution_gate.rs  lib.rs  reverse.rs  submarine.rs  swap_manager.rs  swap_store.rs  types.rs
crates/satspathd/: Cargo.toml
crates/satspathd/src/: index.html  main.rs
docs/: architecture.md  ark_routes.md  ark_swap_safety.md  bip353_dns_resolution.md  docker.md  identity_ownership_model.md  implementations.md  invite_flow.md  mainnet_preview_checklist.md  mainnet_safety.md  pear_threat_model.md  protocol.md  release_checklist.md  resolvers.md  routing_model.md  satspath_protocol.md  team_workflow.md  threat_model.md  wire_p2p.md
examples/: demo_flow.md  rodrigo_profile.json
satspath-pear/: index.js  package-lock.json  package.json
sdk/satspath-p2p/: README.md  package-lock.json  package.json  test-fixture.json
sdk/satspath-p2p/examples/: publish.mjs  resolve.mjs
sdk/satspath-p2p/src/: identity.js  index.js  node.js  profile.js  topic.js
sdk/satspath-p2p/test/: sdk.test.js
