[package]
name = "satspath-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for SatsPath"

[[bin]]
name = "satspath"
path = "src/main.rs"

[dependencies]
satspath-core = { path = "../satspath-core" }
satspath-router = { path = "../satspath-router" }
satspath-swaps = { path = "../satspath-swaps" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
qrcode = { version = "0.14", default-features = false }
reqwest = { workspace = true }
url = { workspace = true }
urlencoding = "2"
secp256k1 = { workspace = true }
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
bitcoin = { workspace = true }
